<!--
  ~ Copyright (c) 2019.
  ~ Created by Josua Lengwenath
  -->

<resources>
    <string name="app_name">Applications</string>
    <string name="apk_location">Apk Location</string>
    <string name="install_date">Install Date</string>
    <string name="last_update">Last Update</string>
    <string name="version_name">Version Name</string>
    <string name="version_code">Version Code</string>
    <string name="target_sdk">Target SDK</string>
    <string name="min_sdk">Min SDK</string>
    <string name="btn_open">Open</string>
    <string name="btn_uninstall">Uninstall</string>
    <string name="open_settings">Open in Settings</string>
</resources>
