<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/windowBackground"
        tools:context=".AppScreen">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <LinearLayout
                        android:layout_margin="7dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <FrameLayout
                            android:layout_height="75dp"
                            android:layout_width="75dp">

                        <ImageView
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                app:srcCompat="@mipmap/ic_launcher"
                                android:transitionName="icon"
                                android:id="@+id/icon"/>
                    </FrameLayout>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp">
                        <TextView
                                android:text="TextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/title"
                                android:layout_weight="1"
                                android:textSize="18sp"
                                android:maxLines="1"/>
                        <TextView
                                android:text="TextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/packageName"
                                android:layout_weight="1"
                                android:maxLines="2"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <com.google.android.material.button.MaterialButton
                            android:text="@string/btn_open"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/btn_open"
                            android:layout_margin="7dp"
                            android:layout_weight="1"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                    <com.google.android.material.button.MaterialButton
                            android:text="@string/btn_uninstall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/btn_uninstall"
                            android:layout_margin="7dp"
                            android:layout_weight="1"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                </LinearLayout>
                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp">
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp">
                        <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                            <TextView
                                    android:text="@string/apk_location"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txt_apk_location_title"
                                    android:maxLines="1"
                                    android:textSize="15sp"
                                    android:textStyle="bold"/>
                            <TextView
                                    android:singleLine="true"
                                    android:ellipsize="middle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txt_apk_location"/>
                        </LinearLayout>
                        <LinearLayout
                                android:layout_marginTop="3dp"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                            <TextView
                                    android:text="@string/version_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txt_version_name_title"
                                    android:maxLines="1"
                                    android:textSize="15sp"
                                    android:textStyle="bold"/>
                            <TextView
                                    android:singleLine="true"
                                    android:ellipsize="middle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txt_version_name"/>
                        </LinearLayout>
                        <LinearLayout
                                android:layout_marginTop="3dp"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                            <TextView
                                    android:text="@string/version_code"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txt_version_code_title"
                                    android:maxLines="1"
                                    android:textSize="15sp"
                                    android:textStyle="bold"/>
                            <TextView
                                    android:singleLine="true"
                                    android:ellipsize="middle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txt_version_code"/>
                        </LinearLayout>
                        <LinearLayout
                                android:layout_marginTop="3dp"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                            <TextView
                                    android:text="@string/target_sdk"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txt_target_sdk_title"
                                    android:maxLines="1"
                                    android:textSize="15sp"
                                    android:textStyle="bold"/>
                            <TextView
                                    android:singleLine="true"
                                    android:ellipsize="middle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txt_target_sdk"/>
                        </LinearLayout>
                        <LinearLayout
                                android:id="@+id/layout_min_sdk"
                                android:visibility="gone"
                                android:layout_marginTop="3dp"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                            <TextView
                                    android:text="@string/min_sdk"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txt_min_sdk_title"
                                    android:maxLines="1"
                                    android:textSize="15sp"
                                    android:textStyle="bold"/>
                            <TextView
                                    android:singleLine="true"
                                    android:ellipsize="middle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txt_min_sdk"/>
                        </LinearLayout>
                        <LinearLayout
                                android:layout_marginTop="3dp"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                            <TextView
                                    android:text="@string/install_date"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txt_install_date_title"
                                    android:maxLines="1"
                                    android:textSize="15sp"
                                    android:textStyle="bold"/>
                            <TextView
                                    android:singleLine="true"
                                    android:ellipsize="middle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txt_install_date"/>
                        </LinearLayout>
                        <LinearLayout
                                android:layout_marginTop="3dp"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                            <TextView
                                    android:text="@string/last_update"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txt_last_update_title"
                                    android:maxLines="1"
                                    android:textSize="15sp"
                                    android:textStyle="bold"/>
                            <TextView
                                    android:singleLine="true"
                                    android:ellipsize="middle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txt_last_update"/>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <com.dertyp7214.themeablecomponents.components.ThemeableButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:id="@+id/btn_permissions"/>
            </LinearLayout>
        </ScrollView>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/foreground"
                android:padding="7dp">
            <FrameLayout
                    android:id="@+id/adaptive"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:srcCompat="@drawable/ic_launcher_background"
                        android:transitionName="fg"
                        android:id="@+id/adaptive_background"/>

                <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:srcCompat="@drawable/ic_launcher_foreground"
                        android:transitionName="bg"
                        android:id="@+id/adaptive_foreground"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="A"
                        android:textSize="14sp"
                        android:id="@+id/adaptive_txt"/>
            </FrameLayout>
        </RelativeLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>